2008-04-25  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Simon.

        Correct the comment. We are in painTextField and don't paint a button.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::paintTextField):

2008-04-25  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Simon.

        Allow ListboxAppearance to take focus as well. Stolen from Tor Arne

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::supportsFocus):

2008-04-25  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger.

        Remove debug output.

        * platform/network/qt/ResourceHandleQt.cpp:
        (WebCore::ResourceHandle::loadResourceSynchronously):

2008-04-25  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Simon.

        Change the string for searchableIndexIntroduction() to match the mac
        and pass http/tests/misc/isindex-formdata.html

        * platform/qt/Localizations.cpp:

2008-04-25  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger.

        When we encounter a new/unknown HTTP request type report it back to WebCore as loading error.

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyHandler::start):

2008-04-25  Benjamin Meyer  <bmeyer@trolltech.com>

        Reviewed by Simon.

        Fix crash in the networking layer.

        Set the m_reply to null right after calling deleteLater().

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyHandler::finish):

2008-04-24  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Oliver Hunt.

        * WebCore.base.exp: Remove two symbols from the export list that don't need to be exported.

2008-04-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18722